--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -1,3 +1,21 @@
+/* Hide bullet points for participant list */
+.participants-list {
+  list-style: none;
+  padding-left: 0;
+}
+
+.delete-participant-btn {
+  background: none;
+  border: none;
+  color: #c00;
+  margin-left: 0.5em;
+  cursor: pointer;
+  font-size: 1em;
+  transition: color 0.2s;
+}
+.delete-participant-btn:hover {
+  color: #900;
+}
 * {
   box-sizing: border-box;
   margin: 0;
